# gura

./: .env.example  Cargo.toml  README.md
src/: authentication.rs  db.rs  error.rs  main.rs
src/api/: mod.rs  package.rs  repo_update.rs  search.rs
src/database/: db.rs  download.rs  error.rs  mod.rs  pool.rs  rpm.rs
src/models/: mod.rs  package.rs  repodata.rs  search.rs
xtask/: Cargo.toml
xtask/src/: main.rs
