[package]
name = "gura"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
jwt-simple = "0.12.9"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["stream", "native-tls-vendored"] }
rocket = { version = "0.5", features = ["json"] }
serde = "1.0.209"
serde-xml-rs = "0.6.0"
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"] }
sqlx-sqlite = "0.8.1"
xz = "0.1.0"